--- a/views/partials/food_choices.ejs
+++ b/views/partials/food_choices.ejs
@@ -1,22 +1,24 @@
-<div class="container">
-	<div class="col-xs-6 col-md-3 text-center choice-border">
-		<div id="breakfast" class="choices"></div>
-		<br>
-		<button class="btn btn-info breakfast-btn choice-btn">New choice?</button>
-	</div>
-	<div class="col-xs-6 col-md-3 text-center">
-		<div id="lunch" class="choices"></div>
-		<br>
-		<button class="btn btn-info lunch-btn choice-btn">New choice?</button>
-	</div>
-	<div class="col-xs-6 col-md-3 text-center">
-		<div id="dinner" class="choices"></div>
-		<br>
-		<button class="btn btn-info dinner-btn choice-btn">New choice?</button>
-	</div>
-	<div class="col-xs-6 col-md-3 text-center">
-		<div id="dessert" class="choices"></div>
-		<br>
-		<button class="btn btn-info dessert-btn choice-btn">New choice?</button>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-xs-12 col-sm-3  col-md-3 text-center">
+			<div id="breakfast" class="choices">
+				<div class="spin">	
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3 col-md-3 text-center">
+			<div id="lunch" class="choices">
+				<div class="spin"></div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3 col-md-3 text-center">
+			<div id="dinner" class="choices">
+				<div class="spin"></div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-3 col-md-3 text-center">
+		<div id="dessert" class="choices">
+			<div class="spin"></div>
+		</div>
 	</div>
 </div>
