--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,28 +3,29 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Plan My Meal</title>
+	<title>Cinch</title>
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+    <link href="/stylesheets/jquery.spin.css" rel="stylesheet" type="text/css" />
    
 </head>
 <body>	
 
-
     <div class="jumbotron main text-center">
         <div class="container">
             <h1 class="display-1">Welcome to Cinch</h1>
-            <p class="display-2">Can't figure out what you want to eat?</p>
-            <p class="display-3">Get instant food choices from restaurants near you for any meal of the day including dessert!</p>
+            <p class="display-2">Can't figure out what you to eat?</p>
+            <p class="display-2">Always the same question.</p>
+            <p class="display-2">Use Cinch and get instant food choices from restaurants near you for any meal of the day including dessert!</p>
         </div>
     </div>
+    <% include partials/nav_bar %>
     <% include partials/food_choices %>
-
-    <p id='domLat'></div>
-    <p id='domLong'></div>
-
+    <% include partials/footer %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="http://spin.js.org/spin.js" type="text/javascript"></script>
+    <script src="/javascript/jquery.spin.js" type="text/javascript"></script>
     <script type="text/javascript" src="/javascript/script.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
