--- a/views/partials/nav_bar.ejs
+++ b/views/partials/nav_bar.ejs
@@ -1,8 +1,13 @@
-<nav class="navbar navbar-inverse fixed">
-    <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Basic Topnav</a></li>
-        <li><a href="#">Page 1</a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-    </ul>
+<nav class="navbar navbar-default" data-spy="affix" data-offset-top="197">
+    <div class="container-fluid">
+        <div class="navbar-header">
+         <!--    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button> -->
+            <a class="navbar-brand" href="#">Cinch</a>
+        </div>
+    </div>
 </nav>
