--- a/views/main.ejs
+++ b/views/main.ejs
@@ -24,7 +24,7 @@
     <% include partials/food_choices %>
     <% include partials/footer %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="http://spin.js.org/spin.js" type="text/javascript"></script>
+    <script src="/javascript/spin.min.js" type="text/javascript"></script>
     <script src="/javascript/jquery.spin.js" type="text/javascript"></script>
     <script type="text/javascript" src="/javascript/script.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
