--- a/views/main.ejs
+++ b/views/main.ejs
@@ -15,7 +15,7 @@
     <div class="jumbotron main text-center">
         <div class="container">
             <h1 class="display-1">Welcome to Cinch</h1>
-            <p class="display-2">Can't figure out what you to eat?</p>
+            <p class="display-2">Can't figure out what you want to eat?</p>
             <p class="display-2">Always the same question.</p>
             <p class="display-2">Use Cinch and get instant food choices from restaurants near you for any meal of the day including dessert!</p>
         </div>
