--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,21 +3,22 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="./images/cinch1017.jpg" height="16px" width="16px">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Suez+One" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<title>Cinch</title>
+    <link rel="shortcut icon" type="image/png" href="./images/favicon_trans.png" height="16px" width="16px">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Suez+One|Oswald" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
+
 <body>	
-    <div class="jumbotron main text-center">
+    <div class="container main text-center">
         <div class="container">
-        <img src="./images/cinchlogotrans1018.png" width="150" height="180">
-            <h1 class="display-1">Welcome to &nbsp; <span class="cinch_span  display-4"style="color:darkorange">Cinch</span></h1>
-            <p class="display-2">Can't figure out what you want to eat?</p>
-            <p class="display-3">Get instant food choices from restaurants near you and create your perfect combination!</p>
-            <button class="btn btn-jumbo loc-btn display-1">Share your location!</button>
-        </div>
+        <img src="./images/final_cinch_logo_border_trans_edited.png" width="300" height="200">
+            <h1 class="line-1">Welcome to <span class="cinch_span"style="color:darkorange">Cinch</span></h1>
+            <p class="line-2">Can't figure out what you want to eat?</p>
+            <p class="line-3">Get instant food choices from restaurants near you and create your perfect combination!</p>
+            <button type="button" class="btn btn-default btn-lg cta-button loc-btn">Start now. It's free!</button>
+        </div>    
     </div>
     <% include partials/food_choices %>
     <% include partials/footer %>
