--- a/views/partials/food_choices.ejs
+++ b/views/partials/food_choices.ejs
@@ -1,32 +1,48 @@
-<div class="container-fluid">
+<div class="container">
 	<div class="row">
 		<div class="col-xs-12 col-md-3 text-center breakfast-bg">
-			<img class="circle-cartoon-img" src="../images/coffee.jpg">
+			<h2 class="meal-type">BREAKFAST</h2>
 			<div id="breakfast" class="choices">
+				<div class="yelp-img-cont"><img class="yelp-img" src="./images/eggsnbacon.png"></div>
+				<h3>375 Reviews</h3>
+				<h3> Around the corner</h3>
+				<img class="rating-stars-img" src="./images/4stars.png">
+				<h4>"I love their eggs n' bacon. Don't miss their free coffee refills on Sundays!"</h4>
 				<div class="spin"></div>
 			</div>
-			<button class="btn btn-default breakfast-btn btn-lg">New choice?</button>
 		</div>
 		<div class="col-xs-12 col-md-3 text-center lunch-bg">
-			<img class="circle-cartoon-img" src="../images/pizza1.jpg">
-				<div id="lunch" class="choices">
-					<div class="spin"></div>
-				</div>
-				<button class="btn btn-default lunch-btn btn-lg">New choice?</button>
+			<h2 class="meal-type">LUNCH</h2>
+			<div id="lunch" class="choices">
+				<div class="yelp-img-cont"><img class="yelp-img" src="./images/pizza-slice.png"></div>
+				<h3>120 Reviews</h3>
+				<h3> Around the corner</h3>
+				<img class="rating-stars-img" src="./images/5stars.png">
+				<h4>"Best pizza in NYC."</h4>
+				<div class="spin"></div>
+			</div>
 		</div>
 		<div class="col-xs-12 col-md-3 text-center dinner-bg">
-			<img class="circle-cartoon-img" src="../images/steakfrites1017.jpg">
-				<div id="dinner" class="choices">
-					<div class="spin"></div>
-				</div>
-				<button class="btn btn-default dinner-btn btn-lg">New choice?</button>
+			<h2 class="meal-type">DINNER</h2>
+			<div id="dinner" class="choices">
+				<div class="yelp-img-cont"><img class="yelp-img" src="./images/pasta.jpg"></div>
+				<h3>289 Reviews</h3>
+				<h3> Around the corner</h3>
+				<img class="rating-stars-img" src="./images/3stars.png">
+				<h4>"Their pasta and meatballs is a must try!"</h4>
+				<div class="spin"></div>
+			</div>
 		</div>
 		<div class="col-xs-12 col-md-3 text-center dessert-bg">
-			<img class="circle-cartoon-img" src="../images/pinkcupcake.jpg">
-				<div id="dessert" class="choices">
-					<div class="spin"></div>
-				</div>
-				<button class="btn btn-default dessert-btn btn-lg">New choice?</button>
+			<h2 class="meal-type">DESSERT</h2>
+			<div id="dessert" class="choices">
+				<div class="yelp-img-cont"><img class="yelp-img" src="./images/blue-ice-cream.png"></div>
+				<h3>1356 Reviews</h3>
+				<h3> Around the corner</h3>
+				<img class="rating-stars-img" src="./images/5stars.png">
+				<h4>"Addicted to their blue ice cream!"</h4>
+				<div class="spin"></div>
+			</div>
 		</div>
 	</div>
 </div>
