--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,146 +1,185 @@
-*{font-family: 'Open Sans', sans-serif;
+*{font-family: 'Open Sans', sans-serif; 
 }
 
 a:hover, a:visited, a:link, a:active{
     text-decoration: none;
 }
 
-body{
-	font-size: 1em;
-	/*background-color: #f2f0eb;*/
+h2, h3 {
+	color: white;
+	font-family: 'Oswald', sans-serif;
+}
+
+h3{
+	font-size: 1.2em;
+	letter-spacing: .05em;
+	margin: 9px 9px;
 }
 
 .meal-title{
 	margin: 0;
 	color: #545F69;
 }
-.loc-btn{
-	background-color: #F18F01;
-	font-size: 1.5em;
-}
-.loc-btn:hover{
-	background-color: white; 
-}
+
 .col-xs-12{
 	padding: 0;
 }
+
 .spin{
 	text-align:middle;
 	position: relative;
 	max-height: 100%;
 }
+
 .choices{
 	padding: 15px;
-	height: 600px;
-}
-#lunch{
-	background-color: #efefef;
-}
-#dessert{
-	background-color: #efefef;
-}
-.choice-btn{
-	background-color: #F18F01;
-	margin-bottom: 5px;
-html{
-	font-size: 100%;        /*Solves IE problem*/
 }
 
-h2, h3{
+.line-1{           
+	font-size: 3.5em;
+	font-family: 'Oswald', sans-serif;
+	letter-spacing: .05em;
+}
+
+.line-2, .line-3{
+	font-size: 1.3em;
+	font-family: 'Oswald', sans-serif;
+	letter-spacing: .05em;
+}
+
+h4{
+    color: white;
+    line-height: 1.3;
+    font-style: italic;
+    padding: 1em 1em;
+    font-size: 1.1em;
+    margin: 0;
+}
+.meal-type{
+	font-family: 'Oswald', sans-serif;
+	letter-spacing: .10em;
+	font-size: 1.5em;
 	color: white;
 }
 
-.choices{
-	height: 32.500em;
-	font-weight: bold;
-}
-/*to keep yelp images stable*/
-
-/*keeps yelp images from growing to large and distorting divs*/
 .yelp-img{
-	max-height: 25%;
-	margin-bottom: 10px;
 	border-radius: 5px;
-	border: solid 1px #222222 ;
+	height: 150px;
+	width: 150px;
 }
 
-.powered-yelp{
-	transform: translateX(-50%);
-	left: 50%;
-	position: absolute;
-	height: 50px;
-	width: 175px;
-	border-radius: 0.313em;
-	max-width: 12em;
-	min-height: 12em;
-}
-
-img{
-	margin-top: 2em;
+.yelp-img-cont{
+	height: 150px;
+	width: 150px;
+	overflow: hidden;
+	margin: 0 auto;
 }
 
 .infoname{
-	margin: 0.7em 0em 0.7em 0em;
+	margin-bottom: 0.5em;
+	letter-spacing: .15em;
+	font-size: 1.4em;
+	color: #333333;
 }
 
-.circle-cartoon-img{
-	border-radius: 5em;
-	height: 8.8em;
-	width: 8.8em;
-	margin-bottom: 1em;
+.infoname:hover{
+	color: #999999;
 }
 
-.btn {
-	margin-bottom: 1em;
+.cta-button {
+	background-color: #ff8c00;
+	margin-top: 2em;
+	border: 1.5px white solid;
+	color: white;
+	font-family: 'Oswald', sans-serif;
+}
+
+.cta-button:hover{box
+	background-color: black;
+	color: white;
+}
+
+.cta-button:visited{
+	background-color: black;
+	color: white;
 }
 
 .main{
 	color:white;
-	height: 100vh;
-	/*background-color: #2292A4;*/
-	background-color: #c5c2c4;
-	margin-top: -3em;
+	height: 96vh;
+    /*margin: 0;*/
+    background-image: url("../images/main1.jpg");
 	background-size: cover;
-}
-
-.navbar{
-	background-color:  #FF7F0E;
+	margin-bottom: 25px;
 }
 
 .breakfast-bg{
-	background-color: #C6DEA6;
+	background-color: rgb(224, 211, 222);
+	margin-bottom: 30px;
 }
 .lunch-bg{
-	background-color: #1B998B;
+	background-color: rgb(162, 221, 166);
+	margin-bottom: 30px;
 }
 .dinner-bg{
-	background-color: #7EBDC3;
+	background-color: rgba(17,75,95, 0.5);
+	margin-bottom: 30px;
 }
 .dessert-bg	{
-	background-color: #114B5F;
+	background-color: rgba(255, 102, 102, 0.6);
+	margin-bottom: 30px;
+}
+
+.breakfast-btn, .lunch-btn, .dinner-btn, .dessert-btn{
+	width: 12em;
+	background-color: #333333;
+	color: white;
+	/*margin-top: 4em;*/
+	margin-bottom: 2em;
 }
 
 .col-xs-12{
 	padding: 0;
 }
 
-footer{
-	margin-top: 1em;
-}
 .footer_yelp_logo{
 	height: 3em;
-	width: 9em;
+	width: 
+	12em;
 	margin-top: -1em;
-}
-
-.display-1{
-	margin-left: -1.5em;
 }
 
 .cinch_span{
 	font-family: 'Suez One', serif;
-	position: absolute;
-	-ms-transform: rotate(-7deg); /* IE 9 */
-	-webkit-transform: rotate(-7deg); /* Chrome, Safari, Opera */
-	transform: rotate(-7deg);
 }
+
+.footer-font{
+	color: black;
+	font-size: 1em;
+}
+
+.choices{
+	height: 400px;
+}
+
+.rating-stars-img{
+	width: 120px;
+}
+
+/* Really small phones */
+@media screen and (max-width:320px) {
+		.cta-button{ margin-top: -0.3em;}
+		body{margin-right: -0.7em;}
+}
+
+
+/*background-color: #2292A4;
+background-color: #c5c2c4;
+background-color: #C6DEA6;
+background-color: #1B998B;
+background-color: rgb(254,140,104);
+background-color: #e6e6ff;
+background-color: #7EBDC3;
+background-color: rgba(17,75,95, 0.8);
+background-color: #114B5F;
+background-color: rgba(241,217,101, 0.6);*/
