--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <hr><footer>
-	<p class="col-xs-12 col-md-4 text-center">Created by Karen Sanchez & Chris Mora</p>
-	<p class="col-xs-12 col-md-4 text-center"> &copy; 2016 All rights reserved </p>
-	<p class="col-xs-12 col-md-4 text-center"><img src="./images/powered.png" class="footer_yelp_logo"></p>
+	<p class="col-xs-12 col-md-4 text-center footer-font">Created by Karen Sanchez & Chris Mora</p>
+	<p class="col-xs-12 col-md-4 text-center footer-font"> &copy; 2016 All rights reserved </p>
+	<p class="col-xs-12 col-md-4 text-center footer-font"><img src="./images/powered.png" class="footer_yelp_logo"></p>
 </footer>
 
