Added location button for users

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -18,6 +18,9 @@
             <p class="display-2">Can't figure out what you want to eat?</p>
             <p class="display-2">Always the same question.</p>
             <p class="display-2">Use Cinch and get instant food choices from restaurants near you for any meal of the day including dessert!</p>
+            <br>
+            <p class="display-3">Cinch works when you share location. This way we can show the restaurants that are close by!</p>
+            <button class="btn btn-jumbo loc-btn">Share your location!</button>
         </div>
     </div>
 
