Added animations for the choices. Also loc-btn hides on click

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,6 +49,12 @@ body{
 	padding: 15px;
 	height: 600px;
 }
+#lunch{
+	background-color: #efefef;
+}
+#dessert{
+	background-color: #efefef;
+}
 .choice-btn{
 	background-color: #F18F01;
 	border: solid 1px #222222;
