--- a/views/main.ejs
+++ b/views/main.ejs
@@ -20,7 +20,7 @@
             <p class="display-2">Use Cinch and get instant food choices from restaurants near you for any meal of the day including dessert!</p>
             <br>
             <p class="display-3">Cinch works when you share location. This way we can show the restaurants that are close by!</p>
-            <button class="btn btn-jumbo loc-btn">Share your location!</button>
+            <button class="btn btn-jumbo loc-btn display-1">Share your location!</button>
         </div>
     </div>
 
