--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -94,7 +94,7 @@ h4{
 	font-family: 'Oswald', sans-serif;
 }
 
-.cta-button:hover{box
+.cta-button:hover{
 	background-color: black;
 	color: white;
 }
@@ -136,6 +136,11 @@ h4{
 	color: white;
 	/*margin-top: 4em;*/
 	margin-bottom: 2em;
+}
+
+.breakfast-btn:hover, .lunch-btn:hover, .dinner-btn:hover, .dessert-btn:hover{
+	background-color: #666666;
+	color: white;
 }
 
 .col-xs-12{
