--- a/views/partials/food_choices.ejs
+++ b/views/partials/food_choices.ejs
@@ -7,7 +7,7 @@
 				<h3>375 Reviews</h3>
 				<h3> Around the corner</h3>
 				<img class="rating-stars-img" src="./images/4stars.png">
-				<h4>"I love their eggs n' bacon. Don't miss their free coffee refills on Sundays!"</h4>
+				<h4>"I love their eggs n' bacon."</h4>
 				<div class="spin"></div>
 			</div>
 		</div>
@@ -29,7 +29,7 @@
 				<h3>289 Reviews</h3>
 				<h3> Around the corner</h3>
 				<img class="rating-stars-img" src="./images/3stars.png">
-				<h4>"Their pasta and meatballs is a must try!"</h4>
+				<h4>"Try their pasta and meatballs."</h4>
 				<div class="spin"></div>
 			</div>
 		</div>
@@ -40,7 +40,7 @@
 				<h3>1356 Reviews</h3>
 				<h3> Around the corner</h3>
 				<img class="rating-stars-img" src="./images/5stars.png">
-				<h4>"Addicted to their blue ice cream!"</h4>
+				<h4>"Blue ice cream!"</h4>
 				<div class="spin"></div>
 			</div>
 		</div>
