--- a/views/main.ejs
+++ b/views/main.ejs
@@ -13,7 +13,7 @@
 <body>	
     <div class="container main text-center">
         <div class="container">
-        <img src="./images/final_cinch_logo_border_trans_edited.png" width="300" height="200">
+        <img src="./images/main-logo.png" width="300" height="200">
             <h1 class="line-1">Welcome to <span class="cinch_span"style="color:darkorange">Cinch</span></h1>
             <p class="line-2">Can't figure out what you want to eat?</p>
             <p class="line-3">Get instant food choices from restaurants near you and create your perfect combination!</p>
