main img fixed btn width fixed

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -12,12 +12,12 @@
 
 <body>	
     <div class="container main text-center">
-        <div class="container">
+        <div class="container main-img-container">
         <img src="./images/main-logo.png" width="300" height="200">
             <h1 class="line-1">Welcome to <span class="cinch_span"style="color:darkorange">Cinch</span></h1>
             <p class="line-2">Can't figure out what you want to eat?</p>
             <p class="line-3">Get instant food choices from restaurants near you and create your perfect combination!</p>
-            <button type="button" class="btn btn-default btn-lg cta-button loc-btn">Start now. It's free!</button>
+            <button type="button" class="btn btn-default btn-lg cta-button loc-btn">Start now!</button>
         </div>    
     </div>
     <% include partials/food_choices %>
