Footer - Added links to devs websites.

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <hr><footer>
-	<p class="col-xs-12 col-md-4 text-center footer-font">Created by Karen Sanchez & Chris Mora</p>
+	<p class="col-xs-12 col-md-4 text-center footer-font">Created by <a href="http://www.sanchezkaren.com/">Karen Sanchez</a> & <a href="http://www.ckmora.com/#/">Chris Mora</a></p>
 	<p class="col-xs-12 col-md-4 text-center footer-font"> &copy; 2016 All rights reserved </p>
 	<p class="col-xs-12 col-md-4 text-center footer-font"><img src="./images/powered.png" class="footer_yelp_logo"></p>
 </footer>
