--- a/views/partials/food_choices.ejs
+++ b/views/partials/food_choices.ejs
@@ -1,48 +1,50 @@
-<div class="container">
+<div class="container mt-3 mb-3">
 	<div class="row">
-		<div class="col-xs-12 col-md-3 text-center breakfast-bg">
-			<h2 class="meal-type">BREAKFAST</h2>
+		<div class="panel panel-default col-sm-6 col-md-3 breakfast-bg">
+			<div class="panel-heading">BREAKFAST</div>
 			<div id="breakfast" class="choices">
-				<div class="yelp-img-cont"><img class="yelp-img" src="./images/eggsnbacon.png"></div>
-				<h3>375 Reviews</h3>
-				<h3> Around the corner</h3>
-				<img class="rating-stars-img" src="./images/4stars.png">
-				<h4>"I love their eggs n' bacon."</h4>
+				<div class="yelp-img-cont"><img class="yelp-img" src="./images/breakfast.jpg"></div>
+				<h3></h3>
+				<h3></h3>
+				<!-- <img class="rating-stars-img" src="./images/4stars.png"> -->
+				<h4></h4>
 				<div class="spin"></div>
 			</div>
 		</div>
-		<div class="col-xs-12 col-md-3 text-center lunch-bg">
-			<h2 class="meal-type">LUNCH</h2>
+		<div class="panel panel-default col-sm-6 col-md-3 lunch-bg">
+			<div class="panel-heading">LUNCH</div>
 			<div id="lunch" class="choices">
-				<div class="yelp-img-cont"><img class="yelp-img" src="./images/pizza-slice.png"></div>
-				<h3>120 Reviews</h3>
-				<h3> Around the corner</h3>
-				<img class="rating-stars-img" src="./images/5stars.png">
-				<h4>"Best pizza in NYC."</h4>
+				<img class="yelp-img" src="./images/lunch.jpg">
+				<div class="yelp-img-cont"></div>
+				<h3></h3>
+				<h3></h3>
+				<!-- <img class="rating-stars-img" src="./images/5stars.png"> -->
+				<h4></h4>
 				<div class="spin"></div>
 			</div>
 		</div>
-		<div class="col-xs-12 col-md-3 text-center dinner-bg">
-			<h2 class="meal-type">DINNER</h2>
+		<div class="panel panel-default col-sm-6 col-md-3 dinner-bg">
+			<div class="panel-heading">DINNER</div>
 			<div id="dinner" class="choices">
-				<div class="yelp-img-cont"><img class="yelp-img" src="./images/pasta.jpg"></div>
-				<h3>289 Reviews</h3>
-				<h3> Around the corner</h3>
-				<img class="rating-stars-img" src="./images/3stars.png">
-				<h4>"Try their pasta and meatballs."</h4>
+				<div class="yelp-img-cont"><img class="yelp-img" src="./images/dinner.jpg"></div>
+				<h3></h3>
+				<h3></h3>
+				<!-- <img class="rating-stars-img" src="./images/3stars.png"> -->
+				<h4></h4>
 				<div class="spin"></div>
 			</div>
 		</div>
-		<div class="col-xs-12 col-md-3 text-center dessert-bg">
-			<h2 class="meal-type">DESSERT</h2>
+		<div class="panel panel-default col-sm-6 col-md-3 dessert-bg">
+			<div class="panel-heading">DESSERT</div>
 			<div id="dessert" class="choices">
-				<div class="yelp-img-cont"><img class="yelp-img" src="./images/blue-ice-cream.png"></div>
-				<h3>1356 Reviews</h3>
-				<h3> Around the corner</h3>
-				<img class="rating-stars-img" src="./images/5stars.png">
-				<h4>"Blue ice cream!"</h4>
+				<div class="yelp-img-cont"><img class="yelp-img" src="./images/dessert.jpg"></div>
+				<h3></h3>
+				<h3></h3>
+				<!-- <img class="rating-stars-img" src="./images/5stars.png"> -->
+				<h4></h4>
 				<div class="spin"></div>
 			</div>
 		</div>
 	</div>
 </div>
+
