--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,9 @@
-<hr><footer>
-	<p class="col-xs-12 col-md-4 text-center footer-font">Created by <a href="http://www.sanchezkaren.com/">Karen Sanchez</a> & <a href="http://www.ckmora.com/#/">Chris Mora</a></p>
-	<p class="col-xs-12 col-md-4 text-center footer-font"> &copy; 2016 All rights reserved </p>
-	<p class="col-xs-12 col-md-4 text-center footer-font"><img src="./images/powered.png" class="footer_yelp_logo"></p>
+<footer div class="container-fluid">
+	<div class="col-xs-12 col-md-4 col-md-offset-4">
+		<h5>Cinch is a food app that queries the <img src="./images/yelp.png"> API 
+	to randomize a meal plan from places near you!</h5>
+		<p>Created by <a href="http://www.sanchezkaren.com/">Karen Sanchez</a> & <a href="http://www.ckmora.com/#/">Chris Mora</a></p>
+		<p>Images by <a href="http://www.unsplash.com/">Unsplash</a></p>
+	</div>
 </footer>
 
