--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,19 +1,84 @@
-*{font-family: 'Open Sans', sans-serif; 
+.mt-3 { margin-top: 3em; }
+.mb-3 { margin-bottom: 3em; }
+/********** NAV ***********/
+.navbar-brand-centered {
+	position: absolute;
+	left: 50%;
+	display: block;
+	width: 160px;
+	text-align: center;
 }
 
-a:hover, a:visited, a:link, a:active{
-    text-decoration: none;
+.navbar>.container .navbar-brand-centered, 
+.navbar>.container-fluid .navbar-brand-centered {
+	margin-left: -80px;
 }
 
-h2, h3 {
+/********** FOOD CHOICES PANELS ***********/
+.panel-default>.panel-heading {
 	color: white;
-	font-family: 'Oswald', sans-serif;
+	background-color: #2c3e50;
+	border-color: #ddd;
+	text-align: center;
+	height: 60px;
+	border-bottom: none;
 }
 
-h3{
-	font-size: 1.2em;
-	letter-spacing: .05em;
-	margin: 9px 9px;
+.panel {
+	margin-bottom: 0px;
+	border: none;
+	box-shadow: none;
+}
+
+.panel.panel-default.col-sm-6.dinner-bg {
+	clear: both;
+}
+
+@media (min-width: 968px) {
+	.panel.panel-default.col-sm-6.dinner-bg {
+		clear: none;
+	}
+}
+
+/********** FOOTER ***********/
+footer.container-fluid {
+	background-color: #e8581e;
+	text-align: center;
+	padding-top: 2em;
+	padding-bottom: 2em;
+	font-family: 'Raleway', sans-serif;
+}
+
+footer h5 {
+	color: white;
+	padding: 1em 0em 1em 0em;
+}
+
+footer a {
+	color: black;
+	font-weight: 700;
+}
+
+footer p {
+	color: black;
+	font-weight: 700;
+}
+
+footer img {
+	width: 15%;
+	margin-top: -11px;
+}
+
+
+
+
+
+
+
+
+
+h1 {
+	color: black;
 }
 
 .meal-title{
@@ -21,56 +86,18 @@ h3{
 	color: #545F69;
 }
 
-.col-xs-12{
-	padding: 0;
-}
-
 .spin{
-	text-align:middle;
+	text-align: middle;
 	position: relative;
 	max-height: 100%;
 }
 
-.choices{
-	padding: 15px;
-}
-
-.line-1{         
-	font-size: 3.5em;
-	font-family: 'Oswald', sans-serif;
-	letter-spacing: .05em;
-}
-
-.line-2, .line-3{
-	font-size: 1.3em;
-	font-family: 'Oswald', sans-serif;
-	letter-spacing: .05em;
-}
-
-h4{
-    color: white;
-    line-height: 1.3;
-    font-style: italic;
-    padding: 1em 1em;
-    font-size: 1.1em;
-    margin: 0;
-}
-.meal-type{
-	font-family: 'Oswald', sans-serif;
-	letter-spacing: .10em;
-	font-size: 1.5em;
-	color: white;
-}
-
 .yelp-img{
-	border-radius: 5px;
-	height: 150px;
-	width: 150px;
+	height: 100%;
+	width: 100%;
 }
 
 .yelp-img-cont{
-	height: 150px;
-	width: 150px;
 	overflow: hidden;
 	margin: 0 auto;
 }
@@ -87,7 +114,7 @@ h4{
 }
 
 .cta-button {
-	background-color: #ff8c00;
+	background-color: #e8581e;
 	margin-top: 2em;
 	width: 10em;
 	border: 1.5px white solid;
@@ -105,36 +132,6 @@ h4{
 	color: white;
 }
 
-.main{
-	color:white;
-	height: 575px;
-    /*margin: 0;*/
-    background-image: url("../images/main1.jpg");
-	background-size: cover;
-	margin-bottom: 25px;
-}
-
-.breakfast-bg{
-	background-color: rgb(224, 211, 222);
-	margin-bottom: 30px;
-	height: 575px;
-}
-.lunch-bg{
-	background-color: rgb(162, 221, 166);
-	margin-bottom: 30px;
-	height: 575px;
-}
-.dinner-bg{
-	background-color: rgba(17,75,95, 0.5);
-	margin-bottom: 30px;
-	height: 575px;
-}
-.dessert-bg	{
-	background-color: rgba(255, 102, 102, 0.6);
-	margin-bottom: 30px;
-	height: 575px;
-}
-
 .breakfast-btn, .lunch-btn, .dinner-btn, .dessert-btn{
 	width: 12em;
 	background-color: #333333;
@@ -148,41 +145,11 @@ h4{
 	color: white;
 }
 
-.col-xs-12{
-	padding: 0;
-}
-
-.footer_yelp_logo{
-	height: 3em;
-	width: 
-	12em;
-	margin-top: -1em;
-}
-
 .cinch_span{
 	font-family: 'Suez One', serif;
 }
 
-.footer-font{
-	color: black;
-	font-size: 1em;
-}
-
-footer a {
-	color: black;
-}
-
-.choices{
-	height: 400px;
-}
-
 .rating-stars-img{
 	width: 120px;
-}
-
-/* Really small phones */
-@media screen and (max-width:320px) {
-		.cta-button{ margin-top: -0.3em;}
-		body{margin-right: -0.7em;}
 }
 
