--- a/views/main.ejs
+++ b/views/main.ejs
@@ -20,15 +20,42 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container-fluid main text-center">
-		<div class="container main-img-container">
-			<h1>Find food fast, with <span class="cinch_span"style="color:#e8581e">Cinch!</span></h1>
-			<button type="button" class="btn btn-default btn-lg cta-button loc-btn">Start now!</button>
-		</div>    
+	<div class="container-fluid text-center">
+		<div class="container mobile jumbotron">
+			<div class="overlap">
+				<img src="./images/img1.jpg">
+				<img src="./images/img2.jpg">
+				<img src="./images/img3.jpg">
+			</div>
+
+			<div class="intro mt-3">
+				<h3>Find food fast, with <span class="cinch_span"style="color:#e8581e">Cinch!</span></h3>
+				<button type="button" class="btn btn-default btn-lg cta-button loc-btn">Start now!</button>
+			</div>
+		</div> 
+
+<!-- 		<div class="desk row visible-lg">
+			<div class="overlap col-lg-5">
+				<img src="./images/img1.jpg">
+				<img src="./images/img2.jpg">
+			</div>
+
+			<div class="col-lg-6">
+				<div class="desktop jumbotron">
+					<div class="col-lg-7 mt-3">
+						<h3>Find food fast, with <span class="cinch_span"style="color:#e8581e">Cinch!</span></h3>
+						<button type="button" class="btn btn-default btn-lg cta-button loc-btn">Start now!</button>
+					</div>
+					<div class="col-lg-3">
+						<img class="test" src="./images/img3.jpg">
+					</div>
+				</div>
+			</div>
+		</div> -->
+
 	</div>
 
 	<% include partials/food_choices %>
-	<% include partials/footer %>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src="/javascript/spin.min.js" type="text/javascript"></script>
