--- a/views/partials/food_choices.ejs
+++ b/views/partials/food_choices.ejs
@@ -47,4 +47,14 @@
 		</div>
 	</div>
 </div>
+<!-- footer -->
+<footer div class="container-fluid">
+	<div class="col-xs-12 col-md-4 col-md-offset-4">
+		<h5>Cinch is a food app that queries the <img src="./images/yelp.png"> API 
+	to randomize a meal plan from places near you!</h5>
+		<p>Developed by <a href="http://www.sanchezkaren.com/">Karen Sanchez</a> & <a href="http://www.ckmora.com/#/">Chris Mora</a></p>
+		<p>Images by <a href="http://www.unsplash.com/">Unsplash</a></p>
+	</div>
+</footer>
+
 
