--- a/views/partials/food_choices.ejs
+++ b/views/partials/food_choices.ejs
@@ -1,31 +1,30 @@
 <div class="container mt-3 mb-3">
 	<div class="row">
-		<div class="panel panel-default col-sm-6 col-md-3 breakfast-bg">
+		<div class="panel panel-default col-xs-12 col-sm-6 col-md-3 breakfast-bg">
 			<div class="panel-heading">BREAKFAST</div>
 			<div id="breakfast" class="choices">
-				<div class="yelp-img-cont"><img class="yelp-img" src="./images/breakfast.jpg"></div>
+				<img class=business-pic src="./images/breakfast.jpg">
 				<div class="spin"></div>
 			</div>
 		</div>
-		<div class="panel panel-default col-sm-6 col-md-3 lunch-bg">
+		<div class="panel panel-default col-xs-12 col-sm-6 col-md-3 lunch-bg">
 			<div class="panel-heading">LUNCH</div>
 			<div id="lunch" class="choices">
-				<img class="yelp-img" src="./images/lunch.jpg">
-				<div class="yelp-img-cont"></div>
+				<img class=business-pic src="./images/lunch.jpg">
 				<div class="spin"></div>
 			</div>
 		</div>
-		<div class="panel panel-default col-sm-6 col-md-3 dinner-bg">
+		<div class="panel panel-default col-xs-12 col-sm-6 col-md-3 dinner-bg">
 			<div class="panel-heading">DINNER</div>
 			<div id="dinner" class="choices">
-				<div class="yelp-img-cont"><img class="yelp-img" src="./images/dinner.jpg"></div>
+				<img class=business-pic src="./images/dinner.jpg">
 				<div class="spin"></div>
 			</div>
 		</div>
-		<div class="panel panel-default col-sm-6 col-md-3 dessert-bg">
+		<div class="panel panel-default col-xs-12 col-sm-6 col-md-3 dessert-bg">
 			<div class="panel-heading">DESSERT</div>
 			<div id="dessert" class="choices">
-				<div class="yelp-img-cont"><img class="yelp-img" src="./images/dessert.jpg"></div>
+				<img class=business-pic src="./images/dessert.jpg">
 				<div class="spin"></div>
 			</div>
 		</div>
@@ -40,5 +39,3 @@
 		<p>Images by <a href="http://www.unsplash.com/">Unsplash</a></p>
 	</div>
 </footer>
-
-
