--- a/views/main.ejs
+++ b/views/main.ejs
@@ -12,16 +12,12 @@
 
 <body>
 	<nav class="navbar navbar-default">
-		<div class="container-fluid">
-			<div class="navbar-header navbar-brand-centered">
-				<a href="#">
-					<span class="cinch_span"style="color:#e8581e; font-size: 35px;">Cinch</span>
-				</a>
-			</div>
+		<div class="navbar-header navbar-brand-centered">
+			<span class="cinch-span"style="color:#e8581e; font-size: 35px;">Cinch</span>
 		</div>
 	</nav>
-	<div class="container-fluid text-center">
-		<div class="container mobile jumbotron">
+	<div class="container-fluid text-center mt-">
+		<div class="container jumbotron">
 			<div class="overlap">
 				<img src="./images/img1.jpg">
 				<img src="./images/img2.jpg">
@@ -29,7 +25,7 @@
 			</div>
 
 			<div class="intro mt-3">
-				<h3>Find food fast, with <span class="cinch_span"style="color:#e8581e">Cinch!</span></h3>
+				<h3>Find food fast, with <span class="cinch-span"style="color:#e8581e">Cinch!</span></h3>
 				<button type="button" class="btn btn-default btn-lg cta-button loc-btn">Start now!</button>
 			</div>
 		</div> 
@@ -42,5 +38,6 @@
 	<script src="/javascript/jquery.spin.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/javascript/script.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 </body>
 </html>
