--- a/views/main.ejs
+++ b/views/main.ejs
@@ -13,7 +13,7 @@
 <body>
 	<nav class="navbar navbar-default">
 		<div class="navbar-header navbar-brand-centered">
-			<span class="cinch-span"style="color:#e8581e; font-size: 35px;">Cinch</span>
+			<span class="cinch-span">Cinch</span>
 		</div>
 	</nav>
 	<div class="container-fluid text-center mt-">
@@ -23,9 +23,8 @@
 				<img src="./images/img2.jpg">
 				<img src="./images/img3.jpg">
 			</div>
-
 			<div class="intro mt-3">
-				<h3>Find food fast, with <span class="cinch-span"style="color:#e8581e">Cinch!</span></h3>
+				<h3>Find food fast, with <span class="cinch-span">Cinch!</span></h3>
 				<button type="button" class="btn btn-default btn-lg cta-button loc-btn">Start now!</button>
 			</div>
 		</div> 
