--- a/views/partials/food_choices.ejs
+++ b/views/partials/food_choices.ejs
@@ -36,6 +36,6 @@
 		<h4>Cinch is a food app that queries the <img src="./images/yelp.png"> API 
 	to randomize a meal plan from places near you!</h4>
 		<p>Developed by <a href="http://www.sanchezkaren.com/">Karen Sanchez</a> & <a href="http://www.ckmora.com/#/">Chris Mora</a></p>
-		<p>Images by <a href="http://www.unsplash.com/">Unsplash</a></p>
+		<!-- <p>Images by <a href="http://www.unsplash.com/">Unsplash</a></p> -->
 	</div>
 </footer>
